    1999-03-24  Stan Shebs  <shebs@andros.cygnus.com>

            * configure.host (mips-dec-mach3*): Use mipsm3, not mach3.

            Attempt to sort out SCO-related configs.
            * configure.host (i[3456]86-*-sysv4.2*): Use this instead of
            i[3456]86-*-sysv4.2MP and i[3456]86-*-sysv4.2uw2*.
            (i[3456]86-*-sysv5*): Recognize this.
            * configure.tgt (i[3456]86-*-sco3.2v5*, i[3456]86-*-sco3.2v4*):
            Recognize these.


TCO Platzbuchungssystem
=======================

2020-05-21  Conny Roloff <conny.roloff@live.de>

    
      