@@ -1,3 +1,6 @@
+
+https://www.red-bean.com/cvs2cl/changelogs.html#maintaining-the-changelog
+
     1999-03-24  Stan Shebs  <shebs@andros.cygnus.com>
 
             * configure.host (mips-dec-mach3*): Use mipsm3, not mach3.
@@ -13,7 +16,11 @@
 TCO Platzbuchungssystem
 =======================
 
-2020-05-21  Conny Roloff <conny.roloff@live.de>
+2020-05-23  Conny Roloff <conny.roloff@live.de>
+        
+        Platzbuchungssystem
+        * Berechtigungen für Mannschaftsführer eingeführt:
+          MYSQL: Tabelle permissionnames
+        * Mannschaftsführer für "Training"-Buchungen im Buchungsformular berechtigt
 
-    
       
